--- a/example.env
+++ b/example.env
@@ -1,5 +1,12 @@
 GITGATEWAY_JWT_SECRET="CHANGE-THIS! VERY IMPORTANT!"
+
 GITGATEWAY_DB_DRIVER=sqlite3
 DATABASE_URL=gorm.db
+
 GITGATEWAY_API_HOST=localhost
 PORT=9999
+
+GITGATEWAY_GITHUB_ACCESS_TOKEN="personal-access-token"
+GITGATEWAY_GITHUB_REPO="owner/name"
+
+GITGATEWAY_ROLES="admin,cms" # leave blank to allow all roles
