Added the option to authentical using OKTA lib (which use RS256 alg).
* Updated golang to 1.11 (the original docker was on 1.8 and code didn't build on it)
* Added instructions to run git-gateway to README.md
* Added abstraction to auth.go such that different implementations of auth can be used
* Updated example.env

--- a/example.env
+++ b/example.env
@@ -1,12 +1,38 @@
-GITGATEWAY_JWT_SECRET="CHANGE-THIS! VERY IMPORTANT!"
+# Do not use quote (ie, "") if you start `git-gateway` with docker command: `--env-file`
 
+# DB
 GITGATEWAY_DB_DRIVER=sqlite3
 DATABASE_URL=gorm.db
 
+# Startup Options
 GITGATEWAY_API_HOST=localhost
 PORT=9999
 
-GITGATEWAY_GITHUB_ACCESS_TOKEN="personal-access-token"
-GITGATEWAY_GITHUB_REPO="owner/name"
+# <> config for JWT Token with HS256 alg
+# AUTHENTICATOR=bearer-jwt-token
 
-GITGATEWAY_ROLES="admin,cms" # leave blank to allow all roles
+# Leave blank for other AUTHENTICATOR
+GITGATEWAY_JWT_SECRET="CHANGE-THIS! VERY IMPORTANT!"
+# </>
+
+# <> config for JWT Token with Okta (RS256) alg
+AUTHENTICATOR=bearer-okta-jwt-token
+
+# REQUIRED for AUTHENTICATOR=bearer-okta-jwt-token
+AUD=api://default
+
+# REQUIRED for AUTHENTICATOR=bearer-okta-jwt-token
+ISSUER=
+# </>
+
+# REQUIRED for both AUTHENTICATOR = {bearer-jwt-token or bearer-okta-jwt-token}
+CLIENT_ID=
+
+# REQUIRED for GITHUB
+GITGATEWAY_GITHUB_ACCESS_TOKEN=
+
+# REQUIRED for GITHUB
+GITGATEWAY_GITHUB_REPO=owner/name
+
+# Commented out to allow roles
+GITGATEWAY_ROLES=admin,cms
