Add RS256 support to api/auth.go

--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
-GITGATEWAY_JWT_SECRET="CHANGE-THIS! VERY IMPORTANT!"
+GITGATEWAY_JWT_SIGNING_METHOD="HS256" # [HS256|RS256]
+GITGATEWAY_JWT_SECRET="CHANGE-THIS! VERY IMPORTANT!" # HS256
+#GITGATEWAY_JWT_KEYFILE="/path/to/keyfile.pub" # RS256
 
 GITGATEWAY_DB_DRIVER=sqlite3
 DATABASE_URL=gorm.db
